--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -5,3 +5,7 @@ development:
 production:
   secret_token: <%= ENV["SECRET_TOKEN"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+test:
+  secret_token: <%= ENV["SECRET_TOKEN"] %>
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
